# draftfi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESKTOP.md  DraftFi_PRD.md  LICENSE  README.md  ROADMAP.md  TASKS.md  docker-compose.yml  download-stats.csv
backend/: .dockerignore  .env.example  Dockerfile  desktop.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  paths.py
backend/app/api/: budget.py  data.py  export.py  goals.py  imports.py  insights.py  llm_status.py  scenario.py  settings.py  simulation.py  transactions.py
backend/app/db/: __init__.py  connection.py  repository.py  schema.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  budget.py  categorization.py  csv_parser.py  ingestion.py  insights.py  llm.py  llm_config.py  preferences.py  scenario_parser.py  security.py  simulation.py  statement_parsers.py  subscriptions.py  sync.py  updates.py
backend/sample_data/: amex_credit.csv  chase_checking.csv  euro_bank.csv  malformed.csv  pipe_bank.csv  sample.ofx  sample.qif  weird_bank.csv
backend/tests/: conftest.py  test_api.py  test_budget.py  test_categorization.py  test_csv_parser.py  test_db.py  test_desktop.py  test_import.py  test_import_batch.py  test_insights.py  test_ledger_batch.py  test_llm.py  test_llm_config.py  test_new_features.py  test_security.py  test_simulation.py  test_sync.py  test_updates.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
packaging/: build.py  requirements-desktop.txt  (+1 more)
(+43 files in other folders)
