[project]
name = "draftfi-backend"
version = "0.1.0"
description = "Local-first financial simulation engine (BYO-LLM) — FastAPI backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]   # make the `app` package importable under bare `pytest`
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # long inline JSON/string fixtures are fine in tests
